# cmake-101

./: .gitignore  README.md
.github/workflows/: c-cpp.yml
helloworld/: CMakeLists.txt  hello
student/: CMakeLists.txt
student/src/: Student.cpp
studentlib_shared/: CMakeLists.txt
use_student_lib/: CMakeLists.txt  libtest.cpp
